--- a/main.bib
+++ b/main.bib
@@ -1736,3 +1736,14 @@ url={https://openreview.net/forum?id=HJGven05Y7},
   pages={24261--24272},
   year={2021}
 }
+
+@article{van2008visualizing,
+  title={Visualizing Data using t-SNE.},
+  author={{van der Maaten}, Laurens and Hinton, Geoffrey},
+  journal={Journal of Machine Learning Research},
+  volume={9},
+  number={11},
+  year={2008}
+}
+
+
