--- a/tex/vertical_self_org.tex
+++ b/tex/vertical_self_org.tex
@@ -411,7 +411,7 @@ TODO: At the moment, various experiments are still ongoing to find out how this 
 The results obtained by this model are presented below. It is important to note that the goal of these models is not to achieve the best possible results on a benchmark. In large-scale comparisons, it has already been found many times that end-to-end backpropagation of error is far superior to other methods, especially in the area of image classification \sidecite{Bartunov_Santoro_Richards_Marris_Hinton_Lillicrap_2018}. Rather, the aim here is to examine interesting concepts that are more biologically plausible and can serve as inspiration for future work.
 
 \subsection{Data set}\seclbl{vertical_self_org_methods_dataset}
-The model was trained and evaluated on the MNIST data set. It is a data set of handwritten digits with $60'000$ training samples and $10'000$ test samples.
+The model was trained and evaluated on the MNIST \cite{Lecun_Bottou_Bengio_Haffner_1998} data set. It is a data set of handwritten digits with $60'000$ training samples and $10'000$ test samples.
 In this thesis the predefined training and test split is used.
 The samples are images of a digit with the resolution $28 \times 28$ pixel in grayscale, i.e. has one colour channel.
 
