--- a/tex/horizontal_self_org.tex
+++ b/tex/horizontal_self_org.tex
@@ -627,22 +627,103 @@ The code-vector, also called the quantized vector $\boldsymbol{z}_q$ is fed into
 TODO: This has not been implemented yet (therefore, not explained in more detail).
 
 
+
 \section{Results}\seclbl{horizontal_self_org_results}
-As for vertical self-organisation (.c.f \secref{vertical_self_org_methods_dataset}), the MNIST data set is used to evaluate the models. 
+As for vertical self-organisation (.c.f \secref{vertical_self_org_methods_dataset}), the MNIST \cite{Lecun_Bottou_Bengio_Haffner_1998} and MNIST-C \sidecite{Mu_Gilmer_2019} data sets are used to evaluate the models. 
+
+Different models are trained to evaluate this architecture. A single VAE is used as the baseline (i), which receives the entire image as input and reconstructs it. This VAE is obviously trained without time steps and communication. Horizontal self-organisation is done using $4$ VAEs ($2\times 2$) in different settings: Four independent VAEs are trained (without time steps and communication), each VAE receives a non-overlapping image patch as input and either reconstructs the received patch (ii) or predicts the entire image (iii). Furthermore, different types of communication are investigated: The VAEs communicate the reconstructed \emph{input patch} to the other VAEs (according to \figref{recon_patch_forw}). This communication takes place over $4$ time steps and the VAEs are trained by either reconstructing the input patch (iv) or predicting the entire image\sidenote{but despite the prediction of the entire image, only the prediction of the reconstructed patch is communicated to the other VAEs.} (v). In another version, each VAE predicts the whole image and forwards the predicted \emph{input patch of the neighbour} to each VAEs over $4$ time steps  (vi) (c.f. \figref{neighbouring_patch_forw}). Finally, the VAEs are also used to predict the whole image over one time step and the \emph{predicted image} is forwarded to the other VAEs (e.g. \figref{recon_img_forw}) (vii). \tabref{hso_models} gives an overview of the models described.
 
 
-% Accuracy 1 VAE: 0.8537
+\begin{table}[h] 
+    \tablbl{hso_models}
+    \centering
+	 \begin{tabular}{l l l l l}
+    	\textbf{No.} & \textbf{$n$ VAEs} & \textbf{Reconstruction} & \textbf{Communication} & \textbf{Time-Steps}\\
+        \hline
+		i & 1 & Image & -  & -\\
+		ii & 4 & Patch & -  & -\\
+		iii & 4 & Image & - & -\\
+		iv & 4 & Patch & Input Patch & $4$\\ %p_diff
+		v & 4 & Image & Input Patch & $4$\\  %p_diff
+		vi & 4 & Image & Neighbouring Patch & $4$\\ %p_same
+		vii & 4 & Image & Image & $1$\\
+    \end{tabular}
+    \caption[Different Models to Evaluate Horizontal Self-Organisation]{Different models for evaluating horizontal self-organisation: The first column shows a number used as a reference id in this thesis. The second column shows the number of VAEs used, the third column whether the input field or the whole image is reconstructed, the fourth column what is communicated to the neighbouring VAEs, and the fifth column over how many time steps the communication takes place.}
+\end{table}
 
-% Accuracy 4 VAE ohne Kommunikation:
-%accuracy: 0.8140
-%|	 accuracy vae 0: 0.5954
-%|	 accuracy vae 1: 0.6578
-%|	 accuracy vae 2: 0.6547
-%|	 accuracy vae 3: 0.6052
+The number of time steps is a design decision: obviously, the models without communication do not need time steps. In the case where each VAE predicts the entire image and forwards it to the other VAEs, only one time step is used. This means that the entire image is predicted once and then forwarded to the other VAEs. It has been observed that one time step is sufficient and that the predictions do not change in further time steps. This could be due to the fact that all relevant information is already transmitted within one time-step and no further communication cycles are necessary. However, if only a patch of the image is forwarded to the other VAEs, the predictions may change over several time steps. In this thesis, $4$ time steps are used when only patches are forwarded to the other VAEs. It is observed that the predictions usually do not change after $4$ time steps and thus using $4$ time steps seems enough. When only patches are forwarded, the model contains much more dynamics: a VAE predicts something, communicates it to its neighbours and receives data from its neighbours. In a subsequent time step, the VAE has more information and can correct its prediction, which in turn can lead to a correction of a neighbour's prediction. Thus, the communication occurs over several time steps in which the VAEs correct each other. An example of four predicted samples is shown in \figref{hso_over_time}: The left side shows the initial prediction of the model (vi) and the right side the prediction of the same image after $4$ time steps. This visualisation indicates that the predictions are improved thanks to the communication. The investigation of the reconstruction error confirms the efficiency of the communication: The initial prediction without communication has an average reconstruction error of $0.23$, and the prediction after $4$ time step has an error of $0.16$.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.79\textwidth]{hso_over_time}
+    \caption[Change of the model's prediction over time]{Four random predictions of model (vi) over $4$ time-steps: The initial prediction is shown on the left and the prediction after $4$ communication cycles on the right.}
+    \figlbl{hso_over_time}
+\end{figure}
+
+Of particular interest in this evaluation is not how well the samples are reconstructed but how well the latent space is shaped. Visualising the $\boldsymbol{\mu}$ values is a simple way to investigate the latent space. Therefore, the $\boldsymbol{\mu}$ vectors with a length of $n=32$ are reduced to $2$ dimensions using t-SNE \sidecite{van2008visualizing} and visualised. Since $25$ VAEs are trained in this evaluation, visualising all t-SNE plots is infeasible. Instead, \figref{hso_tSNE} only shows the plot of the baseline, the plot of the model (ii) as an example of an architecture without communication, and the plot of the model (vi) as a representative example of an architecture with communication. 
+
+As expected, the latent space of model (i) is relatively well organised and the classes are distinguishable within the latent space. In this model, only one VAE is used, which receives the entire image as input which simplifies the organisation of the latent space. Model (ii) consists of $4$ VAEs without communication. Its latent space is less well organised: the classes are no longer clearly identifiable as clusters. However, it is interesting to note that each VAE can separate certain classes better than others because of the different patch it receives as input. Considering all $4$ VAEs, each class can be relatively well identified by at least one VAE, while no VAE can identify all classes. This indicates the benefit of a communication between the VAEs.
+Applying the proposed measures (i.e. communication and predicting the whole image instead of reconstructing the input patch), the arrangement of the latent space for each VAE improves significantly: almost every VAE is able to separate the classes. This supports the usefulness of the proposed measures.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.99\textwidth]{hso_tSNE}
+    \caption[t-SNE plot of the $\boldsymbol{\mu}$ values of different models]{t-SNE plot of the $\boldsymbol{\mu}$ values of four different models: The first row shows the baseline model ($1$ VAE), the second row the model (ii) that consists of $4$ VAEs without communication, and the third row the model (vi) that uses $4$ VAEs with communication channels. Each point in the plot corresponds to a sample, the samples are coloured according to their class.}
+    \figlbl{hso_tSNE}
+\end{figure}
+
+
+Another way to evaluate the latent space is to measure its suitability for classification. This can be done by applying a k-means clustering and then calculating the normalised mutual information (NMI) score between the cluster centres and the labels. This metric allows the comparison between cluster assignments and labels by calculating the consistency. This means that it measures how clearly a cluster can be assigned to a label. \tabref{hso_nmi} shows the NMI scores of the models.
+The NMI score is difficult to interpret as a number, and it is unclear exactly what, for example, a score of $0.6$ means for model (i). However, a relative comparison of the scores is of interest for this evaluation. The model (i) is a single VAE that receives the entire image as input, not just a patch of it. Therefore, this model is assumed to have a well-formed latent space, and the value of $0.6$ is close to an upper bound for a good latent space in this setting.
+
+It is evident that the latent space is significantly better shaped when the whole image is predicted and not only the input patch is reconstructed. For example, models (ii) and (iii) as well as (iv) and (v) are the same models but one of the models reconstructs the input patch and the other one predicts the entire image. The models that predict the whole image are significantly better: the NMI value increases on average from $0.36$ to $0.53$ (model (ii) $\rightarrow$ model (iii)) and from $0.37$ to $0.59$ (model (iv) $\rightarrow$ model (v)) respectively.
+
+A slight improvement through communication can also be observed. Model (iii) consists of $4$ VAEs without communication and predicts the whole picture. It achieves an NMI value of $0.53$. The models with communication are all better, reaching NMI values of $0.59$ (model (v)), $0.54$ (model (vi)) and $0.54$ (model (vii)). However, the improvement is not as clear as for the prediction of the whole image. This is probably due to the fact that the image patches are too large and more VAEs should be used. For example, model (iii) has a very high NMI score compared to the baseline, indicating that this model is able to classify and therefore the image patches contain too much image information. This makes communication less important and the results are not significantly improved by adding communication.
+
+
+\begin{table}[h] 
+    \tablbl{hso_nmi}
+    \centering
+	 \begin{tabular}{l l l l}
+    	\textbf{No.} & \textbf{Avg. NMI} & \textbf{Min. NMI} & \textbf{Max. NMI}\\
+        \hline
+		i & $0.60$ & $0.60$ & $0.60$ \\
+		ii & $0.36$  & $0.29$ & $0.39$ \\
+		iii & $0.53$ & $0.49$ & $0.56$ \\
+		iv & $0.37$ & $0.33$ & $0.41$\\
+		v & $0.59$ & $0.58$ & $0.61$ \\
+		vi & $0.54$ & $0.49$ & $0.60$ \\
+		vii & $0.54$ & $0.49$ & $0.59$\\
+    \end{tabular}
+    \caption[NMI score of different architectures]{The NMI score between the $\boldsymbol{\mu}$ cluster centres and the ground-truth label. The clusters are calculated by using the k-means algorithm. Most models consist of several VAEs, therefore the average, minimum and maximum NMI values are reported for all VAEs per model.}
+\end{table}
+
+Finally, the proposed classification method is evaluated. For this purpose, the accuracy on the MNIST and MNIST-C data sets is determined for each model. The results are shown in \tabref{hso_accuracy}.
+For each VAE of a model, the cosine similarity according to \eqref{hso_13} between a sample and a class prototype is calculated. Thus, the accuracy can not only be calculated for the entire model (i.e. all $4$ VAEs together), but also for each VAE independently. \tabref{hso_accuracy} shows the average accuracy per VAE in the column ``Avg. VAEs''. Furthermore, by calculating the average cosine-similarity a voting over all VAEs is performed and the actual model accuracy os obtained. The accuracy of this voting is shown in the column ``Overall''. The voting works exceptionally well: for example, model (ii) has $4$ VAEs with an average accuracy of $62.4\%$ on the MNIST dataset. The best VAE has an accuracy of $66.1\%$, the worst $59.7\%$. By voting, the overall accuracy increases to $81.7\%$, which is significantly better than the best VAE.
+
+On the MNIST data set, the base model (i) is significantly outperformed by some models in terms of accuracy, but robustness (measured on MNIST-C) is not significantly improved by using multiple VAEs. As with the evaluation of the NMI score, it can be observed that models that predict the entire image perform better than models that only reconstruct a patch of the image. Furthermore, the accuracy of the models without communication is generally very high, suggesting that the image patches are too large and more VAEs should be used.
 
 
 
+\begin{table}[h] 
+    \tablbl{hso_accuracy}
+    \centering
+	 \begin{tabular}{l l l l l}
+	 	& \textbf{Avg. VAEs} & \textbf{Overall} & \textbf{Avg. VAEs} & \textbf{Overall}\\
+    	\textbf{No.} & \textbf{MNIST} & \textbf{MNIST} & \textbf{MNIST-C} & \textbf{MNIST-C}\\
+        \hline
+		i & - & $85.2\%$ & - & $63.4\%$ \\
+		ii & $62.4\%$ & $81.7\%$ & $42.3\%$ & $60.9\%$ \\
+		iii & $78.2\%$ & $89.9\%$ & $45.4\%$ & $64.9\%$ \\
+		iv & $63.8\%$ & $82.6\%$ & $41.8\%$ & $60.5\%$  \\
+		v & $86.1\%$ & $87.6\%$ & $62.4\%$ & $65.2\%$ \\
+		vi & $88.4\%$ & $91.1\%$ & $50.4\%$ & $59.2\%$ \\
+		vii & $78.5\%$ & $90.0\%$ & $46.8\%$ & $64.2\%$ \\
+    \end{tabular}
+    \caption[Accuracy of different architectures on MNIST and MNIST-C]{The accuracy of different models on MNIST and MNIST-C. For both data sets, the average accuracy per VAE and the overall accuracy is reported. The average per VAE is the average accuracy when each VAE makes a prediction on its own (i.e. choosing the highest cosine similarity per VAE according to \eqref{hso_13}). The overall accuracy is calculated by averaging the cosine similarity according to \eqref{hso_14}.}
+\end{table}
 
+The accuracy was calculated by comparing a sample with \emph{one} prototype per class. However, using only one prototype seems to be not enough. For example, when looking at the t-SNE plots in \figref{hso_tSNE}, the same class is divided into more than one cluster. The calculation of the NMI score also indicates that one prototype per class is insufficient: When more clusters are used for k-means clustering, the NMI scores become higher. This is also in line with the analysis of the data and the findings of vertical self-organisation (c.f. \secref{future_vso}).
 
 
 
@@ -651,5 +732,5 @@ As for vertical self-organisation (.c.f \secref{vertical_self_org_methods_datase
 %Sind alle Vektoren bold?
 
 % TODO: target function und objective function vereinheitlichen
-% TODO: net-fragment or net fragment
+% TODO: net-fragment or net fragment, dataset or data set, time-step or time step
 
